added checkout and order processing

--- a/Test/Test/Pages/Cart.cshtml
+++ b/Test/Test/Pages/Cart.cshtml
@@ -67,7 +67,7 @@
 							<li>Number of items: @totalItems</li>
                             <hr>
                             <li>Cart Total: <span style="float: right;">@totalCost $</span></li>
-							<li><a href="checkout.html">Go to Checkout</a></li>
+							<li><a asp-page="/Checkout">Go to Checkout</a></li>
 						</ul>
 					</div>
 				</div>
