--- a/Test/Test/Pages/Shared/HeaderPartial.cshtml
+++ b/Test/Test/Pages/Shared/HeaderPartial.cshtml
@@ -36,9 +36,8 @@
             <div class="menu">
                 <ul>
                     <li><a asp-page="Index">Home</a></li>
-                    <li><a asp-page="Index">Shop</a></li>
-                    <li><a asp-page="Index">About</a></li>
-                    <li><a asp-page="Index">Contact</a></li>
+                    <li><a asp-page="/cart">Cart</a></li>
+                    <li><a asp-page="/account">Account</a></li>
                 </ul>
             </div>
             <div class="search-bar">
@@ -79,10 +78,10 @@
     					</div>
     					<div class="widget-content">
     						<ul>
-    							<li><a asp-page="LogIn">My Account</a></li>
-    							<li><a asp-page="Index">My Orders</a></li>
-    							<li><a asp-page="Index">Cart</a></li>
-    							<li><a asp-page="Index">Checkout</a></li>
+    							<li><a asp-page="/account">My Account</a></li>
+    							<li><a asp-page="/orders">My Orders</a></li>
+    							<li><a asp-page="/cart">Cart</a></li>
+    							<li><a asp-page="/checkout">Checkout</a></li>
     						</ul>
     					</div>
     				</div>
@@ -102,18 +101,8 @@
     					<div class="widget-heading">
     						<h3>Subscribe for Newsletter</h3>
     					</div>
-    					<div class="widget-content">
-    						<div class="subscribe">
-    							<form>
-    								<div class="form-group">
-    									<input type="text" class="form-control" name="subscribe" placeholder="Email">
-    									<img src="img/icons/paper_plane.png">
-    								</div>
-    							</form>
-    						</div>						
-    					</div>
     				</div>
-    			</div> <!-- Footer Widget -->
+    			</div>
     		</div>
 </footer>
 
