--- a/Test/Test/Pages/Shared/AdminHeader.cshtml
+++ b/Test/Test/Pages/Shared/AdminHeader.cshtml
@@ -8,7 +8,7 @@
 		<div class="container">
 			<div class="brand">
 				<div class="logo">
-					<a asp-page="/admin">
+					<a asp-page="/AdminOrders">
 						<img src="/img/img/icons/online_shopping.png">
 						<div class="logo-text">
 							<p class="big-logo">Ecommerce</p>
@@ -17,9 +17,9 @@
 					</a>
 				</div>
 				<div class="shop-icon">
-					<div class="dropdown">
-						<img src="/img/img/icons/account.png">
-					</div>
+					<a asp-page="/AdminOrders">
+						<img src="/img/img/icons/shop.png">
+					</a>
 				</div> 
 			</div> 
 		</div> 
