--- a/Test/Test/Pages/Shared/HeaderPartial.cshtml
+++ b/Test/Test/Pages/Shared/HeaderPartial.cshtml
@@ -37,7 +37,8 @@
                 <ul>
                     <li><a asp-page="Index">Home</a></li>
                     <li><a asp-page="/cart">Cart</a></li>
-                    <li><a asp-page="/account">Account</a></li>
+	                <li><a asp-page="/account">Account</a></li>
+	                <li><a asp-page="/AdminOrders">Admin View</a></li>
                 </ul>
             </div>
             <div class="search-bar">
