--- a/Test/Test/Pages/Account.cshtml
+++ b/Test/Test/Pages/Account.cshtml
@@ -23,7 +23,7 @@
 					</div>
 					<ul>
 						<li><a href="#" class="active">Account <span>></span></a></li>
-						<li><a href="orders.html">My Orders <span>></span></a></li>
+						<li><a asp-page="/Orders">My Orders <span>></span></a></li>
 					</ul>
 				</div>
 				<div class="account-detail">
