--- a/Test/Test/Pages/AdminOrders.cshtml
+++ b/Test/Test/Pages/AdminOrders.cshtml
@@ -18,8 +18,8 @@
 			<div class="sidebar">
 				<h3>Menu</h3>
 				<ul>
-					<li><a class="active" href="order.html">Order</a></li>
-					<li><a href="">Users</a></li>
+					<li><a href="#" class="active">Order</a></li>
+					<li><a asp-page="/AdminViewUsers">Users</a></li>
 				</ul>
 			</div>
 		<div class="content">
