--- a/Test/Test/Pages/Shared/HeaderPartial.cshtml
+++ b/Test/Test/Pages/Shared/HeaderPartial.cshtml
@@ -38,7 +38,7 @@
                     <li><a asp-page="Index">Home</a></li>
                     <li><a asp-page="/cart">Cart</a></li>
 	                <li><a asp-page="/account">Account</a></li>
-	                <li><a asp-page="/AdminOrders">Admin View</a></li>
+	                <li><a asp-page="/AdminOrders">Admin</a></li>
                 </ul>
             </div>
             <div class="search-bar">
