--- a/Test/Test/Pages/Index.cshtml
+++ b/Test/Test/Pages/Index.cshtml
@@ -7,6 +7,9 @@
 <!DOCTYPE html>
 
 <html>
+<head>
+	<script src="js/search.js"></script>
+</head>
 <body>
 <div>
 	<main>
@@ -14,7 +17,7 @@
 			<div class="new-product-section">
 				<div class="product-section-heading">
 					<h2>Featured Products</h2>
-					<h3>!!!</h3>
+					<h3>New Collection</h3>
 				</div>
 				<div class="product-content">
 					@foreach (var product in Model.Products)
