--- a/Test/Test/Pages/Account.cshtml
+++ b/Test/Test/Pages/Account.cshtml
@@ -13,68 +13,73 @@
 </head>
 <body>
 <div class="container">
-		<main>
-			<div class="account-page">
-				<div class="profile">
-                    <div class="profile-img">
-						<h2>@Model.CurrentUser.FirstName @Model.CurrentUser.LastName</h2>
-						<h3>@Model.CurrentUser.Username</h3>
-						<p>@Model.CurrentUser.Email</p>
-					</div>
-					<ul>
-						<li><a href="#" class="active">Account <span>></span></a></li>
-						<li><a asp-page="/Orders">My Orders <span>></span></a></li>
-					</ul>
-				</div>
-				<div class="account-detail">
-					<h2>Account</h2>
-					<div class="billing-detail">					
-						<form class="checkout-form" method="post" asp-page-handler="Update">
-                            <div class="form-inline">
-                                <div class="form-group">
-                                    <label>First Name</label>
-                                    <input type="text" id="FirstName" name="FirstName" value="@Model.CurrentUser.FirstName">
-                                </div>
-                                <div class="form-group">
-                                    <label>Last Name</label>
-                                    <input type="text" id="LastName" name="LastName" value="@Model.CurrentUser.LastName">
-                                </div>
-                            </div>
-                            <div class="form-inline">
-                                <div class="form-group">
-                                    <label>Username</label>
-                                    <input type="text" id="Username" name="Username" value="@Model.CurrentUser.Username">
-                                </div>
+    <main>
+        <div class="breadcrumb">
+        			<ul>
+        				<li>Account</li>
+        			</ul>
+        		</div>
+        <div class="account-page">
+            <div class="profile">
+                <div class="profile-img">
+                    <h2>@Model.CurrentUser.FirstName @Model.CurrentUser.LastName</h2>
+                    <h3>@Model.CurrentUser.Username</h3>
+                    <p>@Model.CurrentUser.Email</p>
+                </div>
+                <ul>
+                    <li><a href="#" class="active">Account <span>></span></a></li>
+                    <li><a asp-page="/Orders">My Orders <span>></span></a></li>
+                </ul>
+            </div>
+            <div class="account-detail">
+                <h2>Account</h2>
+                <div class="billing-detail">
+                    <form class="checkout-form" method="post" asp-page-handler="Update">
+                        <div class="form-inline">
+                            <div class="form-group">
+                                <label>First Name</label>
+                                <input type="text" id="FirstName" name="FirstName" value="@Model.CurrentUser.FirstName">
                             </div>
                             <div class="form-group">
-                                <label>Email</label>
-                                <input type="email" id="Email" name="Email" value="@Model.CurrentUser.Email">
+                                <label>Last Name</label>
+                                <input type="text" id="LastName" name="LastName" value="@Model.CurrentUser.LastName">
                             </div>
+                        </div>
+                        <div class="form-inline">
                             <div class="form-group">
-                                <label>Address</label>
-                                <input type="text" id="Address" name="Address" value="@Model.CurrentUser.Address">
+                                <label>Username</label>
+                                <input type="text" id="Username" name="Username" value="@Model.CurrentUser.Username">
                             </div>
-                            <div class="form-inline">
-                                <div class="form-group">
-                                    <label>Phone number</label>
-                                    <input type="tel" id="Phone" name="phone" minlength="11" maxlength="11" value="@Model.CurrentUser.PhoneNumber">
-                                </div>
-                            </div>
-                            <div class="form-inline">
-                                <div class="form-group">
-                                    <label>Password</label>
-                                    <input type="password" id="Password" name="Password">
-                                </div>
-                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label>Email</label>
+                            <input type="email" id="Email" name="Email" value="@Model.CurrentUser.Email">
+                        </div>
+                        <div class="form-group">
+                            <label>Address</label>
+                            <input type="text" id="Address" name="Address" value="@Model.CurrentUser.Address">
+                        </div>
+                        <div class="form-inline">
                             <div class="form-group">
-                                <label></label>
-                                <input type="submit" id="update" name="update" value="Update">
+                                <label>Phone number</label>
+                                <input type="tel" id="Phone" name="phone" minlength="11" maxlength="11" value="@Model.CurrentUser.PhoneNumber">
                             </div>
-                        </form>		
-					</div>
-				</div>				
-			</div>		
-		</main> <!-- Main Area -->
+                        </div>
+                        <div class="form-inline">
+                            <div class="form-group">
+                                <label>Password</label>
+                                <input type="password" id="Password" name="Password">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label></label>
+                            <input type="submit" id="update" name="update" value="Update">
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </main> <!-- Main Area -->
 	</div>
 </body>
 </html>
