--- a/Test/Test/Pages/Checkout.cshtml
+++ b/Test/Test/Pages/Checkout.cshtml
@@ -15,57 +15,62 @@
 </head>
 <body>
 <div class="container">
-		<main>
-			<h2>Billing Detail</h2>
-			<div class="checkout-page">
-				<div class="billing-detail">					
-					<form class="checkout-form">
-						<h4>Shipping Detail</h4>
-						<div class="form-inline">
-							<div class="form-group">
-								<label>First Name</label>
-								<p>@Model.CurrentUser.FirstName</p>
-							</div>
-							<div class="form-group">
-								<label>Last Name</label>
-								<p>@Model.CurrentUser.LastName</p>
-							</div>
+	<main>
+		<div class="breadcrumb">
+        			<ul>
+        				<li>Checkout</li>
+        			</ul>
+        		</div>
+		<h2>Billing Detail</h2>
+		<div class="checkout-page">
+			<div class="billing-detail">
+				<form class="checkout-form">
+					<h4>Shipping Detail</h4>
+					<div class="form-inline">
+						<div class="form-group">
+							<label>First Name</label>
+							<p>@Model.CurrentUser.FirstName</p>
 						</div>
 						<div class="form-group">
-							<label>Address</label>
-							<p>@Model.CurrentUser.Address</p>
+							<label>Last Name</label>
+							<p>@Model.CurrentUser.LastName</p>
 						</div>
-						<h4>Contact Details</h4>
-						<div class="form-inline">					
-							<div class="form-group">
-								<label>Email</label>
-								<p>@Model.CurrentUser.Email</p>
-							</div>
-							<div class="form-group">
-								<label>Phone</label>
-								<p>@Model.CurrentUser.PhoneNumber</p>
-							</div>
-						</div>
-					</form>
-				</div>
-				<div class="order-summary">
-					<div class="checkout-total">
-						<h3>Order Summary</h3>
-						<ul>
-							<li>Cart Items: <span>@totalItems</span></li>
-							<hr>
-							<li>Total Amount: <span>@totalCost $</span></li>
-							<hr>
-							<li>
-								<form method="post">
-									<input type="submit" value="Place Order"/>
-								</form>
-							</li>
-						</ul>
 					</div>
+					<div class="form-group">
+						<label>Address</label>
+						<p>@Model.CurrentUser.Address</p>
+					</div>
+					<h4>Contact Details</h4>
+					<div class="form-inline">
+						<div class="form-group">
+							<label>Email</label>
+							<p>@Model.CurrentUser.Email</p>
+						</div>
+						<div class="form-group">
+							<label>Phone</label>
+							<p>@Model.CurrentUser.PhoneNumber</p>
+						</div>
+					</div>
+				</form>
+			</div>
+			<div class="order-summary">
+				<div class="checkout-total">
+					<h3>Order Summary</h3>
+					<ul>
+						<li>Cart Items: <span>@totalItems</span></li>
+						<hr>
+						<li>Total Amount: <span>@totalCost $</span></li>
+						<hr>
+						<li>
+							<form method="post">
+								<input type="submit" value="Place Order"/>
+							</form>
+						</li>
+					</ul>
 				</div>
-			</div>		
-		</main> <!-- Main Area -->
+			</div>
+		</div>
+	</main> <!-- Main Area -->
 	</div>
 </body>
 </html>
