--- a/Test/Test/Pages/SignUp.cshtml
+++ b/Test/Test/Pages/SignUp.cshtml
@@ -13,9 +13,14 @@
 <body>
 <div class="container">
     <main>
+        <div class="breadcrumb">
+        			<ul>
+        				<li>SignUP</li>
+        			</ul>
+        		</div>
         <div class="contact">
             <h2 class="heading">Sign Up</h2>
-            
+
             <form class="checkout-form"
                   method="post"
                   asp-route-email="email"
@@ -25,49 +30,49 @@
                   asp-route-lastname="lastname"
                   asp-route-phonenumber="phonenumber"
                   asp-route-address="address">
-                
-                
+
+
                 <div class="form-group">
                     <label>Username</label>
                     <input type="text" id="username" name="username">
                 </div>
-                
+
                 <div class="form-group">
                     <label>E-mail</label>
                     <input type="text" id="email" name="email">
                 </div>
-                
+
                 <div class="form-group">
                     <label>Password</label>
                     <input type="password" id="password" name="password">
                 </div>
-                
+
                 <div class="form-group">
                     <label>First Name</label>
                     <input type="text" id="firstname" name="firstname">
                 </div>
-                
+
                 <div class="form-group">
                     <label>Last Name</label>
                     <input type="text" id="lastname" name="lastname">
                 </div>
-                
+
                 <div class="form-group">
                     <label>Address</label>
                     <input type="text" id="address" name="address">
                 </div>
-                
+
                 <div class="form-group">
                     <label>Phone Number</label>
                     <input type="text" id="phonenumber" name="phonenumber">
                 </div>
-                
+
                 <div class="form-group">
                     <label></label>
                     <input type="submit" id="loginbutton" name="loginbutton" value="Send">
                 </div>
-                
-            </form>  
+
+            </form>
         </div>
     </main> 
 </div>
