--- a/Test/Test/Pages/ViewOrderDetails.cshtml
+++ b/Test/Test/Pages/ViewOrderDetails.cshtml
@@ -25,51 +25,56 @@
 </head>
 <body>
 <div class="container">
-		<main>
-			<h2>Order Details</h2>
-			<h3>Order Status: @Model.order.Status</h3>
-			<div class="cart-page">
-				<div class="cart-items">					
-					<table>
-						<thead>
+	<main>
+		<div class="breadcrumb">
+        			<ul>
+        				<li>Order Details</li>
+        			</ul>
+        		</div>
+		<h2>Order Details</h2>
+		<h3>Order Status: @Model.order.Status</h3>
+		<div class="cart-page">
+			<div class="cart-items">
+				<table>
+					<thead>
+					<tr>
+						<th colspan="3">Order Items</th>
+					</tr>
+					</thead>
+					<tbody>
+					@foreach (var product in Model.Products)
+					{
 						<tr>
-							<th colspan="3">Order Items</th>
+							<td style="width: 20%;"><img src="img/img/product/@(product.ProductID).png"></td>
+							<td style="width: 60%;">
+								<h2>@product.Name</h2>
+								<p>@product.Description</p>
+								<br>
+								<h3>Price: @product.Price $</h3>
+								<br>
+							</td>
+							<td class="qty" style="width: 15%;">
+								<div>QTY: @Model.CartDict[product.ProductID]</div>
+								<br><br>
+								<h3>@(Model.CartDict[product.ProductID] * product.Price) $</h3>
+							</td>
 						</tr>
-						</thead>
-						<tbody>
-						@foreach(var product in Model.Products)
-						{
-							<tr>
-								<td style="width: 20%;"><img src="img/img/product/@(product.ProductID).png"></td>
-								<td style="width: 60%;">
-									<h2>@product.Name</h2>
-									<p>@product.Description</p>
-									<br>
-									<h3>Price: @product.Price $</h3>
-									<br>
-								</td>
-								<td class="qty" style="width: 15%;">
-									<div>QTY: @Model.CartDict[product.ProductID]</div>
-									<br><br>
-									<h3>@(Model.CartDict[product.ProductID] * product.Price) $</h3>
-								</td>
-							</tr>
-						}
-						</tbody>
-					</table>
+					}
+					</tbody>
+				</table>
+			</div>
+			<div class="cart-summary">
+				<div class="checkout-total">
+					<h3>Order Summary</h3>
+					<ul>
+						<li>Number of items: @totalItems</li>
+						<hr>
+						<li>Total: <span style="float: right;">@totalCost $</span></li>
+					</ul>
 				</div>
-				<div class="cart-summary">
-					<div class="checkout-total">
-						<h3>Order Summary</h3>
-						<ul>
-							<li>Number of items: @totalItems</li>
-							<hr>
-							<li>Total: <span style="float: right;">@totalCost $</span></li>
-						</ul>
-					</div>
-				</div>
-			</div>		
-		</main> 
+			</div>
+		</div>
+	</main> 
 	</div>
 </body>
 </html>
