--- a/Test/Test/Pages/ViewProduct.cshtml
+++ b/Test/Test/Pages/ViewProduct.cshtml
@@ -11,49 +11,54 @@
     @if (@Model.Product != null)
         {
             <div class="container">
-		<main>
-		<div class="single-product">
-			<div class="images-section">
-				<div class="larg-img">
-					<img src="img/img/product/@(Model.Product.ProductID).png"
-					     alt="@alt">
-				</div>
-			</div> <!-- End of Images Section-->
+	            <main>
+		            <div class="breadcrumb">
+                    			<ul>
+                    				<li>Product</li>
+                    			</ul>
+                    		</div>
+		            <div class="single-product">
+			            <div class="images-section">
+				            <div class="larg-img">
+					            <img src="img/img/product/@(Model.Product.ProductID).png"
+					                 alt="@alt">
+				            </div>
+			            </div> <!-- End of Images Section-->
 
-			<div class="product-detail">
-				<div class="product-name">
-					<h2>@Model.Product.Name</h2>
-				</div>
-				<div class="product-price">
-					<h3>@Model.Product.Price $</h3>
-				</div>
-				<hr>
-				<div class="product-description">
-					<p>@Model.Product.Description</p>
-				</div>
-				<hr>
-				<div class="product-cart">
-					<form id="cart-form" method="post" asp-page-handler="AddToCart" asp-route-id="@Model.Product.ProductID">
-                        <div class="form-group">
-                            <input type="number" 
-                                   class="cart-number" 
-                                   name="quantity" 
-                                   value="1"
-                                   min="1"
-                                   max="10">
-                            <input type="submit" 
-                                   name="addToCart" 
-                                   value="Add To Cart">
-                        </div>
-                    </form>
-				</div>
-				<hr>
-				<div class="product-meta">
-					<p><b>Category: </b> Product</p>
-				</div>
-			</div> <!-- End of Product Detail-->
-		</div>
-		</main>
+			            <div class="product-detail">
+				            <div class="product-name">
+					            <h2>@Model.Product.Name</h2>
+				            </div>
+				            <div class="product-price">
+					            <h3>@Model.Product.Price $</h3>
+				            </div>
+				            <hr>
+				            <div class="product-description">
+					            <p>@Model.Product.Description</p>
+				            </div>
+				            <hr>
+				            <div class="product-cart">
+					            <form id="cart-form" method="post" asp-page-handler="AddToCart" asp-route-id="@Model.Product.ProductID">
+						            <div class="form-group">
+							            <input type="number"
+							                   class="cart-number"
+							                   name="quantity"
+							                   value="1"
+							                   min="1"
+							                   max="10">
+							            <input type="submit"
+							                   name="addToCart"
+							                   value="Add To Cart">
+						            </div>
+					            </form>
+				            </div>
+				            <hr>
+				            <div class="product-meta">
+					            <p><b>Category: </b> Product</p>
+				            </div>
+			            </div> <!-- End of Product Detail-->
+		            </div>
+	            </main>
 		</div>
         } else
         {
