--- a/Test/Test/Pages/SearchPage.cshtml
+++ b/Test/Test/Pages/SearchPage.cshtml
@@ -21,7 +21,7 @@
 		</div>
 		<div class="new-product-section shop">
 			<div class="product-content">
-				@foreach (var item in Model.products)
+				@foreach (var item in Model.Products)
 				{
 					<div class="product">
 						<a asp-page="/ViewProduct" asp-route-id="@item.ProductID">
